Add Bootstrap framework

--- a/linkDev-assessment/src/app/core/layout/header/header.component.html
+++ b/linkDev-assessment/src/app/core/layout/header/header.component.html
@@ -1,1 +1,25 @@
-<p>header works!</p>
+<header class="header">
+  <div class="container">
+    <div class="logo">
+      <img src="assets/logo.png" alt="Logo">
+    </div>
+    <nav class="navbar">
+      <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/about">About Us</a></li>
+        <li><a routerLink="/events">Events</a></li>
+        <li><a routerLink="/workspace">Workspace</a></li>
+        <li><a routerLink="/accounts">My Accounts</a></li>
+        <li><a routerLink="/resources">Popular Resources</a></li>
+        <li><a routerLink="/contact">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="user-actions">
+      <button class="language-switcher">عربى</button>
+      <div class="user-info">
+        <span>Welcome, Mohamed Zaki</span>
+        <img src="assets/user-icon.png" alt="User Icon">
+      </div>
+    </div>
+  </div>
+</header>
