--- a/linkDev-assessment/src/app/core/layout/footer/footer.component.html
+++ b/linkDev-assessment/src/app/core/layout/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <div class="copyright">
+      <ul>
+        <li class="nav-item ps-0"><span>Copyrights</span></li>
+        <li class="nav-item"><a href="#">Privacy Policy</a></li>
+        <li class="nav-item"><a href="#">Site Map</a></li>
+      </ul>
+      <span> All rights reserved - Link Development Company © 2020 </span>
+    </div>
+    <div class="soical-links">
+      <ul>
+        <li class="nav-item border border-custom">
+          <a href="#">
+            <img src="/assets/img/facebook.svg" alt="facebook">
+          </a>
+        </li>
+        <li class="nav-item border border-custom">
+          <a href="#">
+            <img src="/assets/img/youtube.svg" alt="youtube">
+          </a>
+        </li>
+        <li class="nav-item border border-custom">
+        <a href="#">
+          <img src="/assets/img/instagram.svg" alt="instagram">
+        </a>
+      </li>
+      <li class="nav-item border border-custom">
+        <a href="#">
+          <img src="/assets/img/twitter.svg" alt="twitter">
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+</footer>
