--- a/linkDev-assessment/src/app/core/layout/sidebar/sidebar.component.html
+++ b/linkDev-assessment/src/app/core/layout/sidebar/sidebar.component.html
@@ -1,7 +1,24 @@
-<nav>
-  <ul>
-    <li><a routerLink="/workspace-dashboard">Workspace Dashboard</a></li>
-    <li><a routerLink="/my-requests">My Requests</a></li>
-    <li><a routerLink="/my-tasks">My Tasks</a></li>
-  </ul>
-</nav>
+<div class="left-side">
+  <nav>
+    <ul>
+      <li>
+        <a routerLink="/workspace">
+          <img src="/assets/img/home-icon.svg" alt="home-icon">
+          Home
+        </a>
+      </li>
+      <li>
+        <a routerLink="/my-requests">
+          <img src="/assets/img/requests-icon.png" alt="requests-icon">
+          My Requests
+        </a>
+      </li>
+      <li>
+        <a routerLink="/my-tasks">
+          <img src="/assets/img/tasks-icon.svg" alt="tasks-icon">
+          My Tasks
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
