--- a/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
+++ b/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
@@ -1,11 +1,46 @@
-<div *ngIf="event">
-  <h1>{{ event.title }}</h1>
-  <div>{{ event.start }}</div>
-  <div>{{ event.end }}</div>
-  <div>{{ event.location }}</div>
-  <img [src]="event.image" alt="{{ event.title }}" />
-  <div>{{ event.categoryName }}</div>
-  <div>{{ event.description }}</div>
-  <div>{{ event.eventTickets }}</div>
-  <button (click)="register()">Register Now</button>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+
+      <div class="event-details" *ngIf="event">
+        <div>{{ event.categoryTypeCode }}</div>
+        <h1>{{ event.title }}</h1>
+        <div class="row">
+          <div class="col-md-4 d-flex">
+            <img src="/assets/img/event-calendar.svg" alt="" class="me-3">
+            <div>
+              Start Date
+              <div>
+                {{ event.start }}
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-4 d-flex">
+            <img src="/assets/img/event-calendar.svg" alt="" class="me-3">
+            <div>
+              End Date
+              <div>
+                {{ event.end }}
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-4">
+            <img src="/assets/img/location.svg" alt="" class="me-3">
+            {{ event.location }}
+          </div>
+
+        </div>
+
+        <img [src]="event.image" alt="{{ event.title }}" class="img-fluid my-3" />
+
+        <div>{{ event.description }}</div>
+
+      </div>
+    </div>
+    <div class="col-md-4">
+      <button class="btn btn-register" (click)="register()">Register Now</button>
+    </div>
+  </div>
 </div>
