--- a/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
+++ b/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8">
 
       <div class="event-details" *ngIf="event">
-        <div>{{ event.categoryTypeCode }}</div>
+        <div>{{ event.categoryTypeCode | categoryName }}</div>
         <h1>{{ event.title }}</h1>
         <div class="row">
           <div class="col-md-4 d-flex">
