--- a/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
+++ b/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
@@ -50,7 +50,7 @@
             </div>
           </form>
         </div>
-        <table class="table table-striped table-hover">
+        <table class="table">
           <thead>
             <tr>
               <th>Request Number</th>
