--- a/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.scss
+++ b/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.scss
@@ -1,5 +1,11 @@
 @use "../../../../../assets/sass/variables" as *;
 
+::ng-deep{
+  body{
+    background-color: $white;  
+  }
+}
+
 .container{
   margin: 2.625rem auto;
 
