--- a/linkDev-assessment/src/styles.scss
+++ b/linkDev-assessment/src/styles.scss
@@ -29,3 +29,11 @@ a {
     color: $white;
   }
 }
+
+.text-truncate-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
