--- a/linkDev-assessment/src/app/features/events/components/events-listing/events-listing.component.html
+++ b/linkDev-assessment/src/app/features/events/components/events-listing/events-listing.component.html
@@ -44,6 +44,6 @@
 
 
     </div>
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    <pagination-controls nextLabel="" previousLabel="" (pageChange)="p = $event"></pagination-controls>
   </div>
 </div>
