--- a/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
+++ b/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
@@ -69,7 +69,7 @@
             </tr>
           </tbody>
         </table>
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls nextLabel="" previousLabel="" (pageChange)="p = $event"></pagination-controls>
       </div>
     </div>
   </div>
