--- a/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
+++ b/linkDev-assessment/src/app/features/events/components/event-details/event-details.component.html
@@ -3,14 +3,17 @@
     <div class="col-md-8">
 
       <div class="event-details" *ngIf="event">
-        <div>{{ event.categoryTypeCode | categoryName }}</div>
+        <h5>
+          <span class="badge-custom">{{ event.categoryTypeCode | categoryName }}</span>
+          
+        </h5>
         <h1>{{ event.title }}</h1>
         <div class="row">
           <div class="col-md-4 d-flex">
             <img src="/assets/img/event-calendar.svg" alt="" class="me-3">
             <div>
               Start Date
-              <div>
+              <div class="fw-bolder">
                 {{ event.start }}
               </div>
             </div>
@@ -20,15 +23,21 @@
             <img src="/assets/img/event-calendar.svg" alt="" class="me-3">
             <div>
               End Date
-              <div>
+              <div class="fw-bolder">
                 {{ event.end }}
               </div>
             </div>
 
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 d-flex">
             <img src="/assets/img/location.svg" alt="" class="me-3">
-            {{ event.location }}
+            <div>
+              Event Location
+              <div class="fw-bolder">
+                {{ event.location }}
+              </div>
+            </div>
+            
           </div>
 
         </div>
@@ -40,7 +49,17 @@
       </div>
     </div>
     <div class="col-md-4">
-      <button class="btn btn-register" (click)="register()">Register Now</button>
+      <div class="d-grid gap-2">
+        <button class="btn btn-register" (click)="register()">Register Now</button>        
+      </div>
+      <!-- <div class="event-tickets"  *ngFor="let event of events">
+        <div *ngFor="let ticket of event?.eventTickets" [ngStyle]="{ 'background-color': ticket.color }">
+          <p>{{ ticket.ticketType }}</p>
+          <p>{{ ticket.remainingTickets }} tickets remaining</p>
+          <p>{{ ticket.ticketPriceAmount }} {{ ticket.currency }}</p>
+        </div>
+      </div> -->
+      
     </div>
   </div>
 </div>
