--- a/linkDev-assessment/src/app/core/layout/sidebar/sidebar.component.scss
+++ b/linkDev-assessment/src/app/core/layout/sidebar/sidebar.component.scss
@@ -11,9 +11,9 @@
     list-style-type: none;
     padding: 0;   
     li {      
-      padding: 1.125rem 30px ;
+      padding: 1.125rem 1.875rem;
       &:first-child{
-        padding-top: 45px;
+        padding-top: 2.813rem;
       }
       
       a {
