--- a/linkDev-assessment/src/app/features/my-requests/my-requests.component.scss
+++ b/linkDev-assessment/src/app/features/my-requests/my-requests.component.scss
@@ -3,12 +3,12 @@
 .container {
   margin: 2.625rem auto;  
   .card {
-    padding: 30px;
+    padding: 1.875rem;
     .alert-custom {
       background-color: $secondry-color;
       border-radius: 0;
       border: 0;
-      padding: 20px;
+      padding: 1.25rem;
       form{
         label{
           color: $black;
