--- a/linkDev-assessment/src/app/core/layout/footer/footer.component.scss
+++ b/linkDev-assessment/src/app/core/layout/footer/footer.component.scss
@@ -26,7 +26,7 @@
     .soical-links {
       .border-custom {
         border-radius: 3px;
-        margin: 0 5px;
+        margin: 0 0.313rem;
         width: 50px;
         height: 50px;
         display: flex;
