--- a/linkDev-assessment/src/app/core/layout/header/header.component.scss
+++ b/linkDev-assessment/src/app/core/layout/header/header.component.scss
@@ -3,7 +3,7 @@
   .navbar {
     background-color: $main-color;
     padding: 1rem;
-    height: 120px;
+    height: 11.25rem;
     .container {
       display: flex;
       justify-content: space-between;
@@ -19,7 +19,7 @@
         display: flex;           
         span{         
           align-self: center;  
-          padding-inline-end: 10px;
+          padding-inline-end: 0.625rem;
           color: $white;
           small{
             font-size: 0.875rem;
