--- a/linkDev-assessment/src/app/features/workspace/workspace.component.scss
+++ b/linkDev-assessment/src/app/features/workspace/workspace.component.scss
@@ -3,7 +3,7 @@
 .container {
   margin: 2.625rem auto;  
   .card {
-    padding: 30px;
+    padding: 1.875rem;
 
     h1 {
       font-size: 2.5rem;
